--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -129,7 +129,7 @@
                 </div>
             </ui:repeat>
         </h:panelGroup>
-        <h:panelGroup layout="block" styleClass="uk-container uk-child-width-1-2@m graficas" pt:uk-grid="" id="canvas">
+        <h:panelGroup layout="block" styleClass="uk-container graficas" id="canvas">
 
         </h:panelGroup>
         <div class="uk-flex uk-flex-center">
